update loading files

--- a/Autoencoder models/Glioma Cancer/Methylation_Glioma.ipynb
+++ b/Autoencoder models/Glioma Cancer/Methylation_Glioma.ipynb
@@ -45,18 +45,18 @@
     "methy_glioma_update = methy_glioma.rename(columns={\"Unnamed: 0\": \"attrib_name\"})\n",
     "\n",
     "\n",
-    "train_clinical73_G = pd.read_csv('train_clinical_G73.csv')\n",
+    "train_clinical73_G = pd.read_csv('train_clinical_G73_merged.csv')\n",
     "train_clinical73_G = train_clinical73_G.rename(columns={\"Unnamed: 0.1\": \"attrib_name\"})\n",
     "\n",
-    "test_clinical73_G = pd.read_csv('test_clinical_G73.csv')\n",
+    "test_clinical73_G = pd.read_csv('test_clinical_G73_merged.csv')\n",
     "test_clinical73_G = test_clinical73_G.rename(columns={\"Unnamed: 0.1\": \"attrib_name\"})\n",
     "print(train_clinical73_G.shape)\n",
     "print(test_clinical73_G.shape)\n",
     "\n",
-    "train_clinical82_G = pd.read_csv('train_clinical_G82.csv')\n",
+    "train_clinical82_G = pd.read_csv('train_clinical_G82_merged.csv')\n",
     "train_clinical82_G = train_clinical82_G.rename(columns={\"Unnamed: 0.1\": \"attrib_name\"})\n",
     "\n",
-    "test_clinical82_G = pd.read_csv('test_clinical_G82.csv')\n",
+    "test_clinical82_G = pd.read_csv('test_clinical_G82_merged.csv')\n",
     "test_clinical82_G = test_clinical82_G.rename(columns={\"Unnamed: 0.1\": \"attrib_name\"})\n",
     "print(train_clinical82_G.shape)\n",
     "print(test_clinical82_G.shape)\n",
