update loading files

--- a/Autoencoder models/Breast Invasive cancer/Methylation_Breast.ipynb
+++ b/Autoencoder models/Breast Invasive cancer/Methylation_Breast.ipynb
@@ -45,18 +45,18 @@
     "methy_breast_update = methy_breast.rename(columns={\"Unnamed: 0\": \"attrib_name\"})\n",
     "\n",
     "\n",
-    "train_clinical73_B = pd.read_csv('train_clinical_B73.csv')\n",
+    "train_clinical73_B = pd.read_csv('train_clinical_B73_merged.csv')\n",
     "#train_clinical73_B = train_clinical73_B.rename(columns={\"Unnamed: 0.1\": \"attrib_name\"})\n",
     "\n",
-    "test_clinical73_B = pd.read_csv('test_clinical_B73.csv')\n",
+    "test_clinical73_B = pd.read_csv('test_clinical_B73_merged.csv')\n",
     "#test_clinical73_B = test_clinical73_B.rename(columns={\"Unnamed: 0.1\": \"attrib_name\"})\n",
     "print(train_clinical73_B.shape)\n",
     "print(test_clinical73_B.shape)\n",
     "\n",
-    "train_clinical82_B = pd.read_csv('train_clinical_B82.csv')\n",
+    "train_clinical82_B = pd.read_csv('train_clinical_B82_merged.csv')\n",
     "#train_clinical82_B = train_clinical82_B.rename(columns={\"Unnamed: 0.1\": \"attrib_name\"})\n",
     "\n",
-    "test_clinical82_B = pd.read_csv('test_clinical_B82.csv')\n",
+    "test_clinical82_B = pd.read_csv('test_clinical_B82_merged.csv')\n",
     "#test_clinical82_B = test_clinical82_B.rename(columns={\"Unnamed: 0.1\": \"attrib_name\"})\n",
     "print(train_clinical82_B.shape)\n",
     "print(test_clinical82_B.shape)\n",
